# red-pesto-sw

./: .gitmodules  CMakeLists.txt  README.md  VEML7700.h  bq256xx_charger.h  main.c  prj.conf
bma456-rp2040/: common.c  common.h
boards/arm/red_pesto/: Kconfig.board  Kconfig.defconfig  red_pesto-common.dtsi  red_pesto-pinctrl.dtsi  red_pesto.dts  red_pesto.yaml  red_pesto_defconfig
boards/arm/red_pesto/doc/: index.rst
src/: adc.h  board.h  bq25619e.h  bq256xx_charger.h  cli.h  cli_bindings.h  common.h  gpio.h  i2c.h  lis2dh12.h  main.c  pwm.h  veml7700.h
